<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>javasizer</groupId>
  <artifactId>javasizer</artifactId>
  <version>0.0.2-SNAPSHOT</version>
  <description>sizeof for java object graphs</description>
  <url>https://github.com/hoffrocket/javasizer</url>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:hoffrocket/javasizer.git</connection>
    <developerConnection>scm:git:git@github.com:hoffrocket/javasizer.git</developerConnection>
    <url>git@github.com:hoffrocket/javasizer.git</url>
  </scm>
  <developers>
    <developer>
      <id>hoffrocket</id>
      <name>Jon Hoffman</name>
      <email>jonhoffman@gmail.com</email>
    </developer>
  </developers>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>
  <packaging>jar</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jaJar>${basedir}/target/${project.artifactId}-jar-with-dependencies.jar</jaJar>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <goals>
              <goal>attached</goal>
            </goals>
            <phase>compile</phase>
            <configuration>
              <finalName>${project.artifactId}</finalName>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
              <archive>
                <manifestEntries>
                  <Premain-Class>org.jh.Sizer</Premain-Class>
                </manifestEntries>
              </archive>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Premain-Class>org.jh.Sizer</Premain-Class>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
        <id>surefire-java8</id>
        <activation>
            <jdk>1.8</jdk>
        </activation>
        <build>
            <plugins>
                <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-surefire-plugin</artifactId>
                  <version>2.19.1</version>
                  <configuration>
                    <argLine>
                      -javaagent:${jaJar}
                      -Djava.util.logging.config.file=${basedir}/log.properties
                    </argLine>
                    <workingDirectory>${basedir}/target</workingDirectory>
                  </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>
    <profile>
        <id>surefire-java9</id>
        <activation>
            <jdk>(1.9,)</jdk>
        </activation>
        <build>
            <plugins>
                <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-surefire-plugin</artifactId>
                  <version>2.19.1</version>
                  <configuration>
                    <argLine>
                      -javaagent:${jaJar}
                      -Djava.util.logging.config.file=${basedir}/log.properties
                      --add-opens java.base/java.lang=ALL-UNNAMED
                      --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                    <workingDirectory>${basedir}/target</workingDirectory>
                  </configuration>
                </plugin>
            </plugins>
        </build>
    </profile>
    <profile>
      <id>benchmark</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
              <execution>
                <phase>compile</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <executable>java</executable>
                  <arguments>
                    <argument>--add-opens</argument>
                    <argument>java.base/java.lang=ALL-UNNAMED</argument>
                    <argument>--add-opens</argument>
                    <argument>java.base/java.util=ALL-UNNAMED</argument>
                    <argument>-classpath</argument>
                    <classpath />
                    <argument>-javaagent:${jaJar}</argument>
                    <argument>org.jh.Benchmark</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>